z-PENTESTING/report-builder/inputs/iowa/gcp_firewall_rules.json
[
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2026-05-10T12:18:10.484-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2728044370525513501",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2026-05-10T12:18:10.147-07:00",
    "description": "Allow internal traffic on the default network",
    "direction": "INGRESS",
    "disabled": false,
    "id": "7890118267408049949",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-internal",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/default-allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ]
      }
    ],
    "creationTimestamp": "2026-05-10T12:18:10.372-07:00",
    "description": "Allow RDP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "5555088734919943965",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-rdp",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/default-allow-rdp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2026-05-10T12:18:10.261-07:00",
    "description": "Allow SSH from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "9174418685546030877",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/default-allow-ssh",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      }
    ],
    "creationTimestamp": "2026-05-30T00:37:19.440-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "1364174164196797760",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "nihonmachi-allow-http-from-lb-proxy01",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/nihonmachi-vpc01",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/nihonmachi-allow-http-from-lb-proxy01",
    "sourceRanges": [
      "10.250.200.0/24"
    ],
    "targetTags": [
      "nihonmachi-app"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      }
    ],
    "creationTimestamp": "2026-05-30T00:37:09.217-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2298077990547303754",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "nihonmachi-allow-http-from-vpn01",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/nihonmachi-vpc01",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/nihonmachi-allow-http-from-vpn01",
    "sourceRanges": [
      "0.0.0.0/0",
      "10.100.0.0/16",
      "10.200.0.0/16"
    ],
    "targetTags": [
      "nihonmachi-app"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      }
    ],
    "creationTimestamp": "2026-05-30T00:37:08.340-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2199313684272459083",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "nihonmachi-allow-http-hc01",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/nihonmachi-vpc01",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/nihonmachi-allow-http-hc01",
    "sourceRanges": [
      "130.211.0.0/22",
      "35.191.0.0/16"
    ],
    "targetTags": [
      "nihonmachi-app"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3306"
        ]
      }
    ],
    "creationTimestamp": "2026-05-30T00:37:09.196-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "6981312761057193290",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "nihonmachi-allow-mysql-from-vpn01",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/nihonmachi-vpc01",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/nihonmachi-allow-mysql-from-vpn01",
    "sourceRanges": [
      "0.0.0.0/0",
      "10.100.0.0/16",
      "10.200.0.0/16"
    ],
    "targetTags": [
      "nihonmachi-app"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2026-05-30T00:37:08.430-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "1806567503765646667",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "nihonmachi-allow-ssh-from-everywhere01",
    "network": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/networks/nihonmachi-vpc01",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/gcp-mastery-495919/global/firewalls/nihonmachi-allow-ssh-from-everywhere01",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "nihonmachi-app"
    ]
  }
]
